# gb2gc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CODEOWNERS  README.md  README.md~RF1e32f02d.TMP  THIRD-PARTY-LICENSES
cmake/: add_benchmark.cmake  add_binary_dir_copy.cmake
example/: CMakeLists.txt
example/01_getting_started/: CMakeLists.txt  main.cpp  temp.txt
example/02_selector/: CMakeLists.txt
example/03_config_file/: options.json
example/benchmark1/: CMakeLists.txt  main.cpp
example/benchmark2/: CMakeLists.txt  main.cpp
remove/doc/: memcpy.html  memcpy.json
src/: chart.cpp  chart.h  data_set.cpp  data_set.h  document.cpp  document.h  dom.cpp  dom.h  gb2gc.cpp  gb2gc.h  gbm2gc.cpp  gbm2gc.h  main.cpp  options.cpp  selector.cpp  type_traits.h  variant.h
src/chart/: chart.cpp  chart.h  data_set.cpp  data_set.h  document.cpp  document.h  type_traits.h  variant.h
test/: CMakeLists.txt  benchmark2.json  chart1.html  chart2.html  chart_test.cpp  data_set_test.cpp  dom_test.cpp  gb2gc_test.cpp  gbm2gc_test.cpp  histogram.html  line.html  main.cpp  options_test.cpp  redirect.h  selector_test.cpp  simple_bm.json  variant_test.cpp
test/chart/: chart_test.cpp  data_set_test.cpp
test/data/: bar.html  histogram.html  line.html
